# xyzcad

./: .gitignore  Makefile  README.md  benchmark_nonoptimized.txt  benchmark_optimize_approache1.txt  benchmark_optimize_approache2.txt  benchmarkorig.txt  circList.pkl  clamp.py  debugs.py  debugsegfault.py  demo.mtl  demo.py  demo.step  demo.stl  demo2.py  demo_clss.mtl  demo_clss.py  demo_clss_not_printable.mtl  demo_diff.mtl  demo_diff.py  demo_params.py  parallel-dict.py  pyproject.toml  requirements.txt  screw6longclamp.py  setup.py  sphere.dae  sphere.stl  startuptime.prof  xyzcad.py  xyzcad2.py  xyzcad2_numbabug.py  xyzcad2plt.py  xyzcad3.py
.githooks/: pre-commit
.github/workflows/: python-publish.yml  python-test.yml
.ipynb_checkpoints/: showtlt-checkpoint.ipynb
fedora34-open3d-install/: Dockerfile  fedora34-open3d-install.sh
tests/: test_render.py
xyzcad/: __init__.py  _version.py  export.py  render.py  render2.py  render3.py  render4.py  tlt.py
