[tool.poetry]
name = "xyzcad"
version = "0.4.5"
description = "An implicit surface based functional CAD system"
authors = ["Stefan Helmert <stefan.helmert@t-online.de>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.60.0"
numpy = "^2.0.1"
numpy-stl = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.3.2"
admesh = "^0.98.9"

[tool.isort]
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
